# petbot

./: README.md  dataset.py  ner_trainer.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
models/: __init__.py  intent.py  ner.py
petbot/: __init__.py  dataset.py  dialogue.py
petbot/data/: conversation.csv
petbot/models/: __init__.py  intent.py  intent_classifier.py  ner.py  ner_tagger.py
