[tool.poetry]
name = "petbot"
version = "0.1.0"
description = ""
authors = ["Yikai Fan <yikaifan@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
flair = "^0.11.3"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
